# robocup2020

./: CMakeLists.txt  README.md  RoboCup2020.xlsx  package.xml
src/receptionist/: receptionist.cpp
